--- a/GLFluidSim.vcxproj
+++ b/GLFluidSim.vcxproj
@@ -140,8 +140,9 @@
     <ClInclude Include="include\shader.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\framebuffer.frag" />
-    <None Include="shaders\framebuffer.vs" />
+    <None Include="shaders\compute\advect.comp" />
+    <None Include="shaders\fragment\framebuffer.frag" />
+    <None Include="shaders\vertex\framebuffer.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
