Small optimization made to advect.comp (uses sampler2D which is faster for reading than image2D)

--- a/GLFluidSim.vcxproj
+++ b/GLFluidSim.vcxproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\compute\advect.comp" />
+    <None Include="shaders\compute\jacobi.comp" />
     <None Include="shaders\fragment\framebuffer.frag" />
     <None Include="shaders\vertex\framebuffer.vs" />
   </ItemGroup>
