Moved some Jacobi Iterations to compute shader, needs more testing + converging

--- a/GLFluidSim.vcxproj
+++ b/GLFluidSim.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <None Include="shaders\compute\advect.comp" />
     <None Include="shaders\compute\jacobi.comp" />
+    <None Include="shaders\compute\setbounds.comp" />
     <None Include="shaders\fragment\framebuffer.frag" />
     <None Include="shaders\vertex\framebuffer.vs" />
   </ItemGroup>
