--- a/GLFluidSim.vcxproj.filters
+++ b/GLFluidSim.vcxproj.filters
@@ -52,5 +52,8 @@
     <None Include="shaders\compute\jacobi.comp">
       <Filter>Source Files\Shaders\Compute</Filter>
     </None>
+    <None Include="shaders\compute\setbounds.comp">
+      <Filter>Source Files\Shaders\Compute</Filter>
+    </None>
   </ItemGroup>
 </Project>
